Fixing mobile bug with intro covering up mammals. Moving mobile flier to a message up top.

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ body {
  font-family: Open Sans, Helvetica;
  
 }
+
+.mobile-only {
+	display: none; 
+}
 /*
 #bodyid {
 	overflow: hidden;
