--- a/css/switchy-tablet.css
+++ b/css/switchy-tablet.css
@@ -1,5 +1,5 @@
 @media screen and (min-width:481px) and (max-width:768px) {
-
+  .mobile-only { display: block; }
   #chart {
     width: 300px;
     overflow: hidden;
@@ -19,8 +19,6 @@
     background: #fff
   }
 #header {
-height:0px
-
 }
 #headerbuttons {
 width: 100%;
