--- a/css/switchy.css
+++ b/css/switchy.css
@@ -1,4 +1,5 @@
 @media screen and (max-width: 480px) {
+  .mobile-only { display: block; }
 
   #chart {
     width: 300px;
@@ -54,7 +55,6 @@ line-height: 1.35em;
 
   #intro {
     position: absolute;
-    height: 100%;
     width: 300px;
     margin: 0px auto;
   }
